# TrueNASScale-TUI

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/scale_cli/: __init__.py  api.py  app.py  config.py  tui.css
src/scale_cli/screens/: first_run.py  storage.py
src/scale_cli/widgets/: system_info.py
src/truenasscale_tui/: __init__.py  __main__.py  api.py  app.py  config.py
src/truenasscale_tui/screens/: dashboard.py  first_run.py  services.py  settings.py  storage.py
src/truenasscale_tui/widgets/: disk_table.py  pool_table.py  realtime_metrics.py  service_table.py
