[project]
name = "truenasscale-tui"
version = "0.1.0"
description = "TUI for TrueNAS SCALE 25.04+ — JSON-RPC over WebSocket"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Soumya Purani", email = "66162598+SoumyaPurani@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "textual>=8.2.4",
    "tomli-w>=1.2.0",
    "websockets>=16.0",
]

[project.scripts]
truenasscale-tui = "truenasscale_tui:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
